--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,16 @@
 
-
 .trabajos {
     background-color: #17A2B8;
 }
+
+.titulo {
+    font-size: 40px;
+}
+
+.presentacion {
+    font-size: 16px;
+}
+
+.present-text {
+    font-size: 30px;
+}pprese
